# PotionLab

./: .env.example  .gitignore  Dockerfile  Dockerfile.ai  Dockerfile.streamlit  README.md  compose.yaml  debug_bug.py  docker-compose.yml  edge_case.py  examples.http  instructions.mdc  pyproject.toml  start_test.py  streamlit_app.py  test_db.py  test_e2e_bug.py  test_exact.py  test_fetch.py  test_model.py  test_pydantic_v2.py  test_seed.py  test_sqlmodel_default.py
.sisyphus/: boulder.json
.sisyphus/evidence/: dockerfile-multistage.txt  final-wave-f1-plan-compliance.txt  final-wave-f2-code-quality.txt  final-wave-f4-scope-fidelity-RERUN.txt  final-wave-f4-scope-fidelity.txt  integration-tests-real-services.txt  jwt-role-bug-fix.txt  task-10-readme-walkthrough.txt  task-11-quality-gates.txt  task-12-api-client-tests.txt  task-12-summary.md  task-13-cocktail-browser.txt  task-2-composite-pk-constraint.txt  task-21-compose-stack.txt  task-22-auth-flow.json  task-23-redis-cache.txt  task-23-redis-health.json  task-24-ai-suggestion.json  task-24-redis-cache-hit.txt  task-25-refresh-output.txt  task-27-rbac.json  task-28-demo-run.txt  task-28-verification.md  task-3-schema-valid.txt  task-3-schema-validation.txt  task-30-integration-tests.txt  task-31-final-gate.txt  task-4-test-isolation.txt  task-5-ingredient-crud.txt  (+13 more)
.streamlit/: config.toml
ai_service/: gemini_client.py  main.py  schemas.py
data/: seed_cocktails.json
docs/: EX3-notes.md  exercises.md  index.md  troubleshooting.md
scripts/: __init__.py  demo.sh  init_db.py  refresh.py  seed.py
tests/: conftest.py  test_models.py  test_refresh.py
(+80 files in other folders)
